Fixed minor stuff (style and "jump to browser with keyboard" script)

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -42,7 +42,7 @@ a {
     &:active {
         text-decoration:none;
         color: $ie;
-        @include transition-property(.3s);
+        @include transition(color .25s ease-in-out)
     }
 
     &:hover,
